--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
             <ul id="navbar">
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
                 <li><a href="https://www.facebook.com/kinhdomshop"><i class="fa fa-shopping-cart"></i></a></li>
                 <a href="#" id="close"><i class="fas fa-times"></i></a>
             </ul>
@@ -66,7 +63,7 @@
         <h2>Featured Products</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html';">
                 <img src="./img/products/f1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
