--- a/shop.html
+++ b/shop.html
@@ -17,10 +17,7 @@
             <ul id="navbar">
                 <li><a  href="index.html">Home</a></li>
                 <li><a  class="active" href="#">Shop</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                <li><a href="https://www.facebook.com/kinhdomshop"><i class="fa fa-shopping-cart"></i></a></li>
             </ul>
         </div>
     </section>
